--- a/.gitignore
+++ b/.gitignore
@@ -38,8 +38,8 @@ bower_components
 build/Release
 
 # Dependency directories
-node_modules/
-jspm_packages/
+*node_modules/
+*jspm_packages/
 
 # TypeScript v1 declaration files
 typings/
@@ -88,7 +88,7 @@ dist
 # https://nextjs.org/blog/next-9-1#public-directory-support
 # public
 
-build/
+*build/
 
 # vuepress build output
 .vuepress/dist
