Pass environment variables as build args

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,6 +4,8 @@ WORKDIR /usr/src/app
 COPY package*.json ./
 RUN npm install
 COPY . .
+ARG API_KEY
+ENV API_KEY $API_KEY
 
 EXPOSE 9000
 CMD [ "npm", "start" ]
