--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -8,6 +8,20 @@ upstream backend {
 
 server {
   listen 80;
+  server_name frontend;
+
+  location / {
+    return 301 https;//$host$request_uri;
+  }
+
+  location /.well-known/acme-challenge/ {
+    root /var/www/certbot;
+  }
+}
+
+server {
+  listen 443 ssl;
+  server_name frontend;
 
   location / {
       proxy_pass http://frontend;
