Add domain name

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -8,7 +8,7 @@ upstream backend {
 
 server {
   listen 80;
-  server_name frontend;
+  server_name ec2-13-49-145-194.eu-north-1.compute.amazonaws.com;
 
   location / {
     return 301 https;//$host$request_uri;
@@ -21,7 +21,13 @@ server {
 
 server {
   listen 443 ssl;
-  server_name frontend;
+  server_name ec2-13-49-145-194.eu-north-1.compute.amazonaws.com;
+
+  ssl_certificate /etc/letsencrypt/live/ec2-13-49-145-194.eu-north-1.compute.amazonaws.com/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/ec2-13-49-145-194.eu-north-1.compute.amazonaws.com/privkey.pem;
+
+  include /etc/letsencrypt/options-ssl-nginx.conf;
+  ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
   location / {
       proxy_pass http://frontend;
